package com.gengptx.sever.service;

import org.springframework.web.multipart.MultipartFile;

import java.io.IOException;

/**
 * @author ：xueshanChen
 * @ClassName : ResourceService
 * @description：
 * @version: v1.0
 */

public class ResourceService {


}
