@startuml

title __BACK-END's Class Diagram__\n

  namespace com.gengptx.sever {
    class com.gengptx.sever.SeverApplication {
    }
  }
  

  namespace com.gengptx.sever {
    namespace controller {
      class com.gengptx.sever.controller.BlocksWorldController {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace controller {
      class com.gengptx.sever.controller.CraftWorldController {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace controller {
      class com.gengptx.sever.controller.GeneratorController {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace controller {
      class com.gengptx.sever.controller.ResourceController {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace entity {
      class com.gengptx.sever.entity.Generator {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace entity {
      class com.gengptx.sever.entity.Resource {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.generators {
      abstract class com.gengptx.sever.gengpt.generators.AbstractGenerator {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.generators {
      interface com.gengptx.sever.gengpt.generators.GPTGenerator {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.generators {
      class com.gengptx.sever.gengpt.generators.Main {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.generators {
      class com.gengptx.sever.gengpt.generators.SynthGenerator {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.generators {
      class com.gengptx.sever.gengpt.generators.XMLWriter {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.structure {
      class com.gengptx.sever.gengpt.structure.ActionNode {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.structure {
      class com.gengptx.sever.gengpt.structure.GoalNode {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.structure {
      class com.gengptx.sever.gengpt.structure.Literal {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.structure {
      abstract class com.gengptx.sever.gengpt.structure.Node {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace gengpt.structure {
      class com.gengptx.sever.gengpt.structure.PlanNode {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace service {
      class com.gengptx.sever.service.BlocksWorldService {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace service {
      class com.gengptx.sever.service.CraftWorldService {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace service {
      class com.gengptx.sever.service.GeneratorService {
      }
    }
  }
  

  namespace com.gengptx.sever {
    namespace service {
      class com.gengptx.sever.service.ResourceService {
      }
    }
  }
  

  com.gengptx.sever.gengpt.generators.AbstractGenerator .up.|> com.gengptx.sever.gengpt.generators.GPTGenerator
  com.gengptx.sever.gengpt.generators.SynthGenerator -up-|> com.gengptx.sever.gengpt.generators.AbstractGenerator
  com.gengptx.sever.gengpt.structure.ActionNode -up-|> com.gengptx.sever.gengpt.structure.Node
  com.gengptx.sever.gengpt.structure.GoalNode -up-|> com.gengptx.sever.gengpt.structure.Node
  com.gengptx.sever.gengpt.structure.Literal .up.|> java.lang.Comparable
  com.gengptx.sever.gengpt.structure.PlanNode -up-|> com.gengptx.sever.gengpt.structure.Node


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
